--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
 
   <script>
-//kiad oeruiduc table data
-function loadTable() {
+
+  function loadTable() {
   const xhttp = new XMLHttpRequest();
   xhttp.onload = function() {
     buildTable(this.responseText);
@@ -24,6 +24,8 @@ var buildTable = function(data) {
   console.log(table);
 }
 
+loadTable();
+    
   </script>
 </body>
 </html>
