--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ table.addEventListener('click', (ev) => {
         }
         var td = document.createElement('td');
         td.classList = 'filled';
-        td.innerHTML = '<p class="symbol">' + tableData[list[i]].symbol + '</p>';
+       // td.innerHTML = '<p class="symbol">' + tableData[list[i]].symbol + '</p>';
         td.dataset.period = tableData[ list[i] ].period;
         td.dataset.group = tableData[ list[i] ].period;
         row.appendChild(td);
