--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ var buildTable = function(data) {
     for (var i = 0; i < list.length; i ++ ) {
           if ( tableData[ list[i] ].category !== "lanthanide" && tableData[ list[i] ].category !== "actinide" ) { 
 
-          buildCells( tableData[ list[i] );
+          buildCells( tableData[ list[i] ]);
             
     }//end what we only do for the elements that we want at this time
       else {
