--- a/index.html
+++ b/index.html
@@ -115,15 +115,15 @@ var buildTable = function(data) {
     spacerCol.colspan = 2;
     row.appendChild(spacerCol);
     for ( var l = 0; l <= extraRows.lanthanide.length; l++) {
-      console.log(extraRows.lanthanide[l]);
       buildCells( extraRows.lanthanide[l]);
     }
     table.appendChild(row);
     row = document.createElement('tr');
         row.appendChild(spacerCol);
-    for ( var l = 0; l <= extraRows.actinide.length; l++) {
+
+    /*for ( var l = 0; l <= extraRows.actinide.length; l++) {
       buildCells( extraRows.actinide[l]);
-    }
+    }*/
         table.appendChild(row);
       
   } else {
