--- a/index.html
+++ b/index.html
@@ -6,8 +6,14 @@
 <style>
 
   td {
-    width:100px;
-    height:100px;
+    width:90px;
+    height:90px;
+    text-align:middle;
+    vertical-align:middle;
+  }
+
+  .spacer {
+    height:30px;
   }
   .filled {
     border:1px solid black;
@@ -20,7 +26,9 @@
   font-weight:bold;
   font-family: Arial;
 }
-  
+  .hidden p {
+    display:none;
+  }
 </style>
 </head>
 <body>
@@ -109,7 +117,8 @@ var buildTable = function(data) {
        } // end the loop that we do for each element. Now loop through the lanthanides and actinides.
 
     var spacerRow = document.createElement('tr');
-    spacerRow.innerHTML = "<td class='empty'></td>";
+    spacerRow.classList="spacer";
+    spacerRow.innerHTML = "<td class='empty spacer'></td>";
     table.appendChild( spacerRow);
     row = document.createElement('tr');
     var spacerCol = document.createElement('td');
