--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
   <title></title>
 <style>
 
+  #gameDisplay {
+    position:absolute;
+    top:10px;
+    left:200px;
+    width:300px;
+    height:300px;
+    background-color:#aaaaaa;
+  }
+  
   td {
     width:90px;
     height:90px;
@@ -32,7 +41,10 @@
 </style>
 </head>
 <body>
-
+<div id="gameDisplay">
+  <p id="timer"></p>
+  
+</div>
   <table id="table">
     <tbody>
     </tbody>
