--- a/index.html
+++ b/index.html
@@ -13,6 +13,43 @@
     height:300px;
     background-color:#aaaaaa;
   }
+
+  #timer {
+    font-size: 10px;
+  }
+
+  #scoreBoard {
+    font-size:15px;
+    font-weight:bold;
+  }
+
+  #targetElement {
+    width:100px;
+    height:100px;
+    background-color:white;
+  }
+
+  #targetNumber {
+    position:absolute;
+    top:10px;
+    left:10px;
+  }
+
+  #targetSymbol {
+    position:absolute;
+    top:40px;
+    left:40px;
+    font-size:30px;
+    font-weight:bold;
+    font-family:Arial;
+  }
+
+  #targetName {
+    position:absolute;
+    bottom:10px;
+    left:20px;
+    font-size:15px;
+  }
   
   td {
     width:90px;
@@ -42,8 +79,13 @@
 </head>
 <body>
 <div id="gameDisplay">
-  <p id="timer"></p>
-  
+  <p id="timer">Time:</p>
+  <p id="scoreBoard"></p>
+  <div id="targetElement">
+    <p id="targetNumber">1</p>
+    <p id="targetSymbol">He</p>
+    <p id="targetName">Helium</p>
+  </div>
 </div>
   <table id="table">
     <tbody>
