--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   #gameDisplay {
     position:absolute;
     top:10px;
-    left:200px;
-    width:300px;
-    height:300px;
+    left:300px;
+    width:200px;
+    height:200px;
     background-color:#aaaaaa;
   }
 
@@ -24,6 +24,7 @@
   }
 
   #targetElement {
+    position:absolute;
     width:100px;
     height:100px;
     background-color:white;
