--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 <body>
 <div id="gameDisplay">
   <p id="timer">Time:</p>
-  <p id="scoreBoard"></p>
+  <p id="scoreBoard">Score:</p>
   <div id="targetElement">
     <p id="targetNumber">1</p>
     <p id="targetSymbol">He</p>
