--- a/index.html
+++ b/index.html
@@ -32,24 +32,27 @@
 
   #targetNumber {
     position:absolute;
-    top:10px;
+    top:2px;
     left:10px;
+    margin:0px;
   }
 
   #targetSymbol {
     position:absolute;
-    top:40px;
-    left:40px;
+    top:30%;
+    left:30%;
     font-size:30px;
     font-weight:bold;
     font-family:Arial;
+    margin:0px;
   }
 
   #targetName {
     position:absolute;
     bottom:10px;
-    left:20px;
+    left:30%;
     font-size:15px;
+    margin:0px;
   }
   
   td {
