--- a/index.html
+++ b/index.html
@@ -39,20 +39,25 @@
 
   #targetSymbol {
     position:absolute;
-    top:30%;
-    left:30%;
+    top:50%;
+    left:50%;
     font-size:30px;
     font-weight:bold;
     font-family:Arial;
     margin:0px;
+    margin-left:-25px;
+    margin-right:-25px;
   }
 
   #targetName {
     position:absolute;
     bottom:10px;
-    left:30%;
+    left:50%;
     font-size:15px;
     margin:0px;
+    
+    margin-left:-25px;
+    margin-right:-25px;
   }
   
   td {
