--- a/index.html
+++ b/index.html
@@ -41,12 +41,11 @@
     position:absolute;
     top:50%;
     left:50%;
+    transform: translateX(-50%) translatey(-50%);
     font-size:30px;
     font-weight:bold;
     font-family:Arial;
     margin:0px;
-    margin-left:-25px;
-    margin-right:-25px;
   }
 
   #targetName {
@@ -55,9 +54,7 @@
     left:50%;
     font-size:15px;
     margin:0px;
-    
-    margin-left:-25px;
-    margin-right:-25px;
+    transform: translateX(-50%);
   }
   
   td {
