--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@ var chooseRandomElement = function() {
   var random = Math.floor( Math.random() * list.length );
   obj = {
     index: random,
-    element: tableData[ list[random] ];
+    element: tableData[ list[random] ]
   }
   return obj;
 }
