--- a/index.html
+++ b/index.html
@@ -221,6 +221,7 @@ var displayTarget = function( element ) {
   document.getElementById("targetSymbol").innerText = element.symbol;
   document.getElementById("targetName").innerText = element.name;
   document.getElementById("targetNumber").innerText = element.number;
+  document.getElementById("targetElement").style.backgroundColor= "#"+element['cpk-hex'];
 }
 
 
