--- a/index.html
+++ b/index.html
@@ -204,6 +204,7 @@ var buildTable = function(data) {
   } else {
     console.log('Problem getting data.');
   }
+newTarget();
 }
 
 var chooseRandomElement = function() {
