--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@ var newTarget = function() {
       document.getElementById('scoreBoard').innerText = score;
     }
 
-    var updateTimer() = function() {
+    var updateTimer = function() {
       document.getElementById( 'timer' ).innerText = Math.floor( (Date.now() - targetTime) / 1000);
     }
     
