--- a/index.html
+++ b/index.html
@@ -211,9 +211,10 @@ var chooseRandomElement = function() {
   var random = Math.floor( Math.random() * list.length );
   el = {
     index: random,
-    element: tableData[ list[random] ],
+    element: tableData[ list[random] ] /*,
     x: document.getElementById( tableData[ list[random] ] ).cellIndex,
-    y: document.getElementById( tableData[ list[random] ] ).parentElement.rowIndex
+    y: document.getElementById( tableData[ list[random] ] ).parentElement.rowIndex 
+    */
   }
   return el;
 }
@@ -244,7 +245,8 @@ var newTarget = function() {
       ev.target.cellIndex, 
       ev.target.parentElement.rowIndex
     ];
-    if (Math.abs( x - targetElement.x ) <=3 && Math.abs( y- targetElement.y) <=3 ) {
+    
+    if (Math.abs( x - document.getElementById('#' + targetElement.name ).cellIndex ) <=3 && Math.abs( y - document.getElementById( '#' + targetElement.name ).parentElement.rowIndex) <=3 ) {
       document.getElementById( targetElement.name ).classList = "filled";
       score += 500 - Math.floor(shots*100) - ( (Date.now() - targetTime) / 1000);
       updateScore();
