--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@ var newTarget = function() {
     ];
     
     if (Math.abs( x - document.getElementById(targetElement.element.name ).cellIndex ) <=3 && Math.abs( y - document.getElementById( targetElement.element.name ).parentElement.rowIndex) <=3 ) {
-      document.getElementById( targetElement.name ).classList = "filled";
+      document.getElementById( targetElement.element.name ).classList = "filled";
       score += 500 - Math.floor(shots*100) - ( (Date.now() - targetTime) / 1000);
       updateScore();
       shots=0;
@@ -256,7 +256,7 @@ var newTarget = function() {
       shots++;
       updateTimer();
       if (shots > 3 ) {
-        document.getElementById( targetElement.name ).classList = "filled";
+        document.getElementById( targetElement.element.name ).classList = "filled";
         score -=100;
         updateScore();
         newTarget();
