--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ var timer;
     
 
     
-  function loadTable() {=
+  function loadTable() {
   const xhttp = new XMLHttpRequest();
   xhttp.onload = function() {
     buildTable(this.responseText);
