--- a/index.html
+++ b/index.html
@@ -167,6 +167,10 @@ var buildCells = function( element ) {
         td.id = element.name;
         row.appendChild(td);
         group++
+     if ( element.name=="Ununennium" ) {
+      console.log('cell',td);
+       console.log('row',row);
+     }
   
 }
     
