--- a/index.html
+++ b/index.html
@@ -215,6 +215,7 @@ var buildTable = function(data) {
         extraRows[ tableData[ list[i] ].category ].push( tableData[ list[i]]);
       }
        } // end the loop that we do for each element. Now loop through the lanthanides and actinides.
+    table.appendChild(row);
 
     var spacerRow = document.createElement('tr');
     spacerRow.classList="spacer";
