--- a/index.html
+++ b/index.html
@@ -223,9 +223,8 @@ var buildTable = function(data) {
     spacerRow.innerHTML = "<td class='empty spacer'></td>";
     table.appendChild( spacerRow);
     row = document.createElement('tr');
-    var spacerCol = document.createElement('td');
-    spacerCol.colSpan = 2;
-    row.appendChild(spacerCol);
+    row.HTMLcontent = "<td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>";
+        row.appendChild(spacerCol);
     for ( var l = 0; l < extraRows.lanthanide.length; l++) {
       buildCells( extraRows.lanthanide[l]);
     }
