--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@ var buildTable = function(data) {
     table.appendChild( spacerRow);
     row = document.createElement('tr');
     row.HTMLcontent = "<td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>";
-        row.appendChild(spacerCol);
+     //   row.appendChild(spacerCol);
     for ( var l = 0; l < extraRows.lanthanide.length; l++) {
       buildCells( extraRows.lanthanide[l]);
     }
